Add SLSTR L1 RBT handling

--- a/check_OLCEFR.ipynb
+++ b/check_OLCEFR.ipynb
@@ -19,7 +19,11 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T740.zarr\"\n",
+    "# Product1 remove /coordinates folder, put into conditions, dataset wihtout coordinates\n",
+    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T569.zarr\"\n",
+    "# Product2 remove /coordinates dataset with coordinates\n",
+    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T763.zarr\"\n",
+    "\n",
     "# SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr\")\n",
     "# product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T688.zarr\""
    ]
@@ -30,8 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prod=EOProduct(\"prod\",url=str(SAMPLE_PATH / product)).open(mode=OpeningMode.OPEN)\n",
-    "prod"
+    "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
+    "prod.load()\n",
+    "prod.measurements.image.oa01_radiance.plot()\n"
    ]
   },
   {
@@ -42,7 +47,25 @@
    "source": [
     "group = \"measurements/image\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
-    "ds"
+    "rad = ds.oa01_radiance\n",
+    "rad.plot()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "ax = plt.axes()\n",
+    "ds.oa01_radiance.plot.pcolormesh(\n",
+    "    ax=ax,\n",
+    "    x=\"longitude\", y=\"latitude\", add_colorbar=False\n",
+    ")"
    ]
   },
   {
