First improvements for OLCI and SLSTR L1

--- a/check_OLCEFR.ipynb
+++ b/check_OLCEFR.ipynb
@@ -9,7 +9,7 @@
     "from pathlib import Path\n",
     "import xarray as xr\n",
     "from eopf import EOProduct\n",
-    "from eopf.common.constants import OpeningMode\n"
+    "from eopf.common.constants import OpeningMode"
    ]
   },
   {
@@ -20,12 +20,7 @@
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
     "# Product1 remove /coordinates folder, put into conditions, dataset wihtout coordinates\n",
-    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T569.zarr\"\n",
-    "# Product2 remove /coordinates dataset with coordinates\n",
-    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T763.zarr\"\n",
-    "\n",
-    "# SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr\")\n",
-    "# product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T688.zarr\""
+    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T509.zarr\""
    ]
   },
   {
@@ -35,8 +30,16 @@
    "outputs": [],
    "source": [
     "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
-    "prod.load()\n",
-    "prod.measurements.image.oa01_radiance.plot()\n"
+    "prod\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prod.measurements.image.oa01_radiance.plot()"
    ]
   },
   {
@@ -46,11 +49,18 @@
    "outputs": [],
    "source": [
     "group = \"measurements/image\"\n",
-    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
     "rad = ds.oa01_radiance\n",
-    "rad.plot()\n",
-    "\n",
-    "\n"
+    "rad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad.plot()"
    ]
   },
   {
@@ -85,8 +95,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tp=ds[\"atmospheric_temperature_profile\"].interp(tie_pressure_levels=832.2)\n",
+    "tp.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "group = \"conditions/geometry\"\n",
-    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group=\"conditions/orphans\"\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
     "ds"
    ]
   }
