--- a/check_SLSRBT.ipynb
+++ b/check_SLSRBT.ipynb
@@ -19,10 +19,7 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S049.zarr\"\n",
-    "\n",
-    "# SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr\")\n",
-    "# product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S987.zarr\""
+    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S819.zarr/\""
    ]
   },
   {
@@ -32,7 +29,6 @@
    "outputs": [],
    "source": [
     "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
-    "prod.load()\n",
     "prod.measurements.inadir.s7_bt_in\n"
    ]
   },
@@ -43,10 +39,8 @@
    "outputs": [],
    "source": [
     "group = \"measurements/inadir\"\n",
-    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
-    "bt = ds.s7_bt_in\n",
-    "bt\n",
-    "\n"
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "ds\n"
    ]
   },
   {
@@ -56,7 +50,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(14, 6))\n",
+    "bt=ds.s7_bt_in\n",
+    "plt.figure(figsize=(8, 8))\n",
     "ax = plt.axes()\n",
     "bt.plot.pcolormesh(\n",
     "    ax=ax,\n",
@@ -72,7 +67,7 @@
    "source": [
     "group = \"conditions/meteo\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
-    "ds"
+    "ds.temperature_profile_tp.interp(p_atmos=980).plot()"
    ]
   }
  ],
