Change package name from xarray_safe to xarray_eop, and add the eop backend

--- a/check_OLCEFR.ipynb
+++ b/check_OLCEFR.ipynb
@@ -49,7 +49,10 @@
    "outputs": [],
    "source": [
     "group = \"measurements/image\"\n",
+    "# Open with xarray zarr engine\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "# Open with custom engine=\"eop\"\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product, group=group, engine=\"eop\")\n",
     "rad = ds.oa01_radiance\n",
     "rad"
    ]
