Bug fix in opening SAFE dataset

--- a/check_OLCEFR.ipynb
+++ b/check_OLCEFR.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial on manipulating OLCI L1 EFR product"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,8 +26,15 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "# Product1 remove /coordinates folder, put into conditions, dataset wihtout coordinates\n",
-    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T509.zarr\""
+    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T931.zarr\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open the product using EOPF API and visualize the tree structure\n",
+    "Note: there are still warning messages due to problems of dependencies in the CPM package"
    ]
   },
   {
@@ -34,12 +48,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting data fails with version 1.5.1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "prod.measurements.image.oa01_radiance.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opening gridded measurement data data with xarray"
    ]
   },
   {
@@ -58,12 +86,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Underlying data is dask.array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simple raster plot\n",
+    "Note that using xarray, data is correctly decoded and masked"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rad.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot using the coordinates (lon,lat)"
    ]
   },
   {
@@ -82,6 +141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Open Meteorological conditions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -90,6 +156,13 @@
     "group = \"conditions/meteo\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
     "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpolate the atmo. temp. profile at p=832.2 hPa and plot"
    ]
   },
   {
@@ -103,6 +176,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Open sat/sun angles\n",
+    "Angles are stored on a tiepoint subgrid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -111,6 +192,13 @@
     "group = \"conditions/geometry\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
     "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Have a look at condition parameters for removed pixels"
    ]
   },
   {
