--- a/check_SLSRBT.ipynb
+++ b/check_SLSRBT.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial on manipulating SLSTR L1 RBT product"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -19,7 +26,15 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S819.zarr/\""
+    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S106.zarr/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open the product using EOPF API and visualize the tree structure\n",
+    "Note: there are still warning messages due to problems of dependencies in the CPM package"
    ]
   },
   {
@@ -29,7 +44,14 @@
    "outputs": [],
    "source": [
     "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
-    "prod.measurements.inadir.s7_bt_in\n"
+    "prod\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opening gridded measurement data data with xarray"
    ]
   },
   {
@@ -39,8 +61,27 @@
    "outputs": [],
    "source": [
     "group = \"measurements/inadir\"\n",
+    "# Open with xarray zarr engine\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "# Open with custom engine=\"eop\"\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product, group=group, engine=\"eop\")\n",
     "ds\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The underlying data is dask.array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.s7_bt_in.data"
    ]
   },
   {
@@ -57,6 +98,34 @@
     "    ax=ax,\n",
     "    x=\"longitude\", y=\"latitude\", add_colorbar=False\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the confidence flag to plot land pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = \"quality/inadir\"\n",
+    "flag = xr.open_dataset(SAMPLE_PATH / product ,group=group,engine=\"eop\")\n",
+    "meanings=flag.confidence_in.attrs[\"flag_meanings\"].split()\n",
+    "land_bit = meanings.index(\"land\")\n",
+    "land = (flag.confidence_in & 2**land_bit == 2**land_bit)\n",
+    "land.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open the meteo data and interpolate the temperature profile at P=980hPa"
    ]
   },
   {
