--- a/check_OLCERR.ipynb
+++ b/check_OLCERR.ipynb
@@ -1,17 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial on manipulating SLSTR L1 RBT product"
+    "# Tutorial on manipulating OLCI L1 ERR product"
    ]
   },
   {
@@ -22,8 +15,7 @@
    "source": [
     "from pathlib import Path\n",
     "import xarray as xr\n",
-    "from eopf import EOProduct\n",
-    "from eopf.common.constants import OpeningMode\n"
+    "from xarray_eop.eop import open_eop_datatree"
    ]
   },
   {
@@ -33,25 +25,14 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S106.zarr/\""
+    "product = SAMPLE_PATH / \"S3OLCERR_20230506T015316_0180_B117_T096.zarr\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Open the product using EOPF API and visualize the tree structure\n",
-    "Note: there are still warning messages due to problems of dependencies in the CPM package"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
-    "prod\n"
+    "### Opening datatree structure"
    ]
   },
   {
@@ -67,19 +48,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group = \"measurements/inadir\"\n",
+    "group = \"measurements/image\"\n",
     "# Open with xarray zarr engine\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
     "# Open with custom engine=\"eop\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product, group=group, engine=\"eop\")\n",
-    "ds\n"
+    "rad = ds.oa01_radiance\n",
+    "rad"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The underlying data is dask.array"
+    "Underlying data is dask.array"
    ]
   },
   {
@@ -88,7 +70,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.s7_bt_in.data"
+    "rad.data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Simple raster plot\n",
+    "Note that using xarray, data is correctly decoded and masked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot using the coordinates (lon,lat)"
    ]
   },
   {
@@ -98,10 +104,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "bt=ds.s7_bt_in\n",
-    "plt.figure(figsize=(8, 8))\n",
+    "plt.figure(figsize=(14, 6))\n",
     "ax = plt.axes()\n",
-    "bt.plot.pcolormesh(\n",
+    "ds.oa01_radiance.plot.pcolormesh(\n",
     "    ax=ax,\n",
     "    x=\"longitude\", y=\"latitude\", add_colorbar=False\n",
     ")"
@@ -111,28 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use the confidence flag to plot land pixels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "group = \"quality/inadir\"\n",
-    "flag = xr.open_dataset(SAMPLE_PATH / product ,group=group,engine=\"eop\")\n",
-    "meanings=flag.confidence_in.attrs[\"flag_meanings\"].split()\n",
-    "land_bit = meanings.index(\"land\")\n",
-    "land = (flag.confidence_in & 2**land_bit == 2**land_bit)\n",
-    "land.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Open the meteo data and interpolate the temperature profile at P=980hPa"
+    "#### Open Meteorological conditions"
    ]
   },
   {
@@ -143,7 +127,43 @@
    "source": [
     "group = \"conditions/meteo\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\")\n",
-    "ds.temperature_profile_tp.interp(p_atmos=980).plot()"
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Interpolate the atmo. temp. profile at p=832.2 hPa and plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp=ds[\"atmospheric_temperature_profile\"].interp(tie_pressure_levels=832.2)\n",
+    "tp.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Open sat/sun angles\n",
+    "Angles are stored on a tiepoint subgrid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group = \"conditions/geometry\"\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "ds"
    ]
   }
  ],
