Adding comments in notebook

--- a/tutorial_s3.ipynb
+++ b/tutorial_s3.ipynb
@@ -119,7 +119,12 @@
    "source": [
     "### Open zipped data from S3 bucket\n",
     "\n",
-    "without the root folder"
+    "without the root folder, no compression\n",
+    "The zip archive can be obtained following:\n",
+    "```shell\n",
+    "$> cd product.zarr\n",
+    "$> zip -0 -r product.zarr.zip .\n",
+    "``` "
    ]
   },
   {
