Add few notebooks

--- a/check_SLSRBT_xarray_onthecloud.ipynb
+++ b/check_SLSRBT_xarray_onthecloud.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial on manipulating SYN L2 AOD product from the cloud"
+    "# Tutorial on manipulating SLSTR L1 RBT product from the cloud"
    ]
   },
   {
@@ -13,11 +13,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datatree\n",
     "import xarray as xr\n",
     "from pathlib import Path\n",
-    "from upath import UPath\n",
-    "from xarray_eop.eop import open_eop_datatree"
+    "from xarray_eop.eop import open_eop_datatree\n"
    ]
   },
   {
@@ -52,15 +50,14 @@
     "        }\n",
     "    }\n",
     "\n",
-    "secrets[\"s3input\"].pop(\"region_name\",None)\n",
-    "\n"
+    "secrets[\"s3input\"].pop(\"region_name\",None)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Browse S3 buckets and get SYNAOD product"
+    "### Browse S3 buckets and get SLSFRP product"
    ]
   },
   {
@@ -76,7 +73,7 @@
     "    secret=secrets[\"s3input\"][\"secret\"],\n",
     "    endpoint_url=secrets[\"s3input\"][\"endpoint_url\"]\n",
     ")\n",
-    "s3_path = s3.glob(SAMPLE_PATH+\"S3SYNAOD*.zip\")\n",
+    "s3_path = s3.glob(SAMPLE_PATH+\"S3SLSRBT*.zip\")\n",
     "store=f\"zip::s3://{s3_path[0]}\"\n",
     "store"
    ]
@@ -85,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Open the whole product with datatree"
+    "### Opening the whole product with datatree"
    ]
   },
   {
@@ -94,10 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Custom open datatree\n",
     "dt = open_eop_datatree(store,backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s3input\"]}})\n",
-    "# Standard open datatree\n",
-    "# dt = datatree.open_datatree(store,engine=\"zarr\",chunks={},backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s3input\"]}})\n",
     "dt"
    ]
   },
@@ -105,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Opening gridded measurement data"
+    "### Opening S7 BT"
    ]
   },
   {
@@ -114,64 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds=dt.measurements\n",
-    "aod550 = ds.aod_550\n",
-    "aod550"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Underlying data is dask.array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aod550.data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Simple raster plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aod550.plot()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Plot using the coordinates (lon,lat)\n",
-    "Note that in SYN AOD product, lat/lon are undefined when the data is missing, which is not correctly handled by matplotlib pcolormesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Remove margins\n",
-    "aod550_dropna=aod550.dropna(\"columns\",how=\"all\")\n",
-    "aod550_dropna=aod550_dropna.dropna(\"rows\",how=\"all\")\n",
-    "\n",
-    "# Fill remaining missing values\n",
-    "aod550_dropna[\"latitude\"] = ([\"rows\",\"columns\"],aod550_dropna.latitude.bfill(\"columns\").data)\n",
-    "aod550_dropna[\"longitude\"] = ([\"rows\",\"columns\"],aod550_dropna.longitude.bfill(\"columns\").data)"
+    "s7bt = dt.measurements.inadir.s7_bt_in\n",
+    "s7bt"
    ]
   },
   {
@@ -181,9 +119,10 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.figure(figsize=(14, 6))\n",
+    "bt=s7bt\n",
+    "plt.figure(figsize=(8, 8))\n",
     "ax = plt.axes()\n",
-    "aod550_dropna.plot.pcolormesh(\n",
+    "bt.plot.pcolormesh(\n",
     "    ax=ax,\n",
     "    x=\"longitude\", y=\"latitude\", add_colorbar=False\n",
     ")"
@@ -193,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Open uncertainties"
+    "### Use the confidence flag to plot land pixels"
    ]
   },
   {
@@ -202,8 +141,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds=dt.quality\n",
-    "ds"
+    "group = \"quality/inadir\"\n",
+    "flag = dt.quality.inadir\n",
+    "meanings=flag.confidence_in.attrs[\"flag_meanings\"].split()\n",
+    "land_bit = meanings.index(\"land\")\n",
+    "land = (flag.confidence_in & 2**land_bit == 2**land_bit)\n",
+    "land.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open the meteo data and interpolate the temperature profile at P=980hPa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meteo=dt.conditions.meteo\n",
+    "meteo.temperature_profile_tp.interp(p_atmos=980).plot()"
    ]
   }
  ],
