--- a/check_SLSRBT_xarray.ipynb
+++ b/check_SLSRBT_xarray.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "from pathlib import Path\n",
     "import xarray as xr\n",
-    "from eopf import EOProduct\n",
-    "from eopf.common.constants import OpeningMode\n"
+    "from xarray_eop.eop import open_eop_datatree\n"
    ]
   },
   {
@@ -26,15 +25,15 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S106.zarr/\""
+    "files = [ f for f in SAMPLE_PATH.glob(\"S3SLSRBT*.zarr\")]\n",
+    "product = files[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Open the product using EOPF API and visualize the tree structure\n",
-    "Note: there are still warning messages due to problems of dependencies in the CPM package"
+    "### Opening the whole product with datatree"
    ]
   },
   {
@@ -43,8 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prod=EOProduct(\"prod\",url=str(product)).open(mode=OpeningMode.OPEN)\n",
-    "prod\n"
+    "dt = open_eop_datatree(product)\n",
+    "dt"
    ]
   },
   {
