Update and add few notebooks

--- a/check_MSIL1C_EOPFAlex.ipynb
+++ b/check_MSIL1C_EOPFAlex.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![logo](check_point_logo.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Tutorial on manipulating MSI L1C product\n"
    ]
   },
@@ -17,27 +24,23 @@
     "\n",
     "import cartopy.crs as ccrs  # For static plotting\n",
     "import cartopy.feature as cf\n",
-    "import datatree as dt\n",
     "import geopandas  # For interactive plotting\n",
     "import numpy as np\n",
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "from eopf.store.safe2 import XarrayStore\n",
+    "from eopf.store.safe2 import EOSafeStore2\n",
+    "from eopf.common.constants import OpeningMode\n",
+    "from eopf.product.eo_variable import EOVariable"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inputs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Get AWS credentials"
+    "Change directory to EOPF CPM source code ...."
    ]
   },
   {
@@ -46,32 +49,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "# Assuming credentials are in ~/.eopf/secrets.json\n",
-    "try:\n",
-    "    SECRET_PATH = Path.home() / Path(\".eopf/secrets.json\")\n",
-    "    with open(SECRET_PATH) as f:\n",
-    "        secrets=json.load(f)\n",
-    "\n",
-    "# Or use ENV variables\n",
-    "except:\n",
-    "    import os\n",
-    "    secrets = {\"s2input\" : {\n",
-    "        \"key\": os.getenv(\"AWS_ACCESS_KEY_ID\"),\n",
-    "        \"secret\": os.getenv(\"AWS_SECRET_ACCES_KEY\"),\n",
-    "        \"endpoint_url\": os.getenv(\"AWS_ENDPOINT_URL\"),\n",
-    "        \"region_name\": os.getenv(\"AWS_DEFAULT_REGION\")\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "secrets[\"s2input\"].pop(\"region_name\",None)\n"
+    "import os\n",
+    "path = '/mount/internal/work-st/projects/cs-412/2078-dpr/workspace/vlevasseur/Projects/eopf-cpm'\n",
+    "old_path = os.getcwd()\n",
+    "os.chdir(path)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Browse S3 bucket and get MSIL1C product"
+    "product can only be accessed locally"
    ]
   },
   {
@@ -80,16 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import s3fs\n",
-    "SAMPLE_PATH = \"s3://s2-input/Products/S2MSI--L0plus-L1A-L1B-L1C-L2A/\"\n",
-    "s3 = s3fs.S3FileSystem(\n",
-    "    key=secrets[\"s2input\"][\"key\"],\n",
-    "    secret=secrets[\"s2input\"][\"secret\"],\n",
-    "    endpoint_url=secrets[\"s2input\"][\"endpoint_url\"]\n",
-    ")\n",
-    "s3_path = s3.glob(SAMPLE_PATH+\"S02MSIL1C*.zip\")\n",
-    "store=f\"zip::s3://{s3_path[0]}\"\n",
-    "store"
+    "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
+    "files = [ f for f in SAMPLE_PATH.glob(\"S02MSIL1C*.zarr\")]\n",
+    "product = files[0]\n",
+    "product"
    ]
   },
   {
@@ -105,8 +87,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdt = dt.open_datatree(store, engine=\"zarr\", mode=\"r\", chunks={},backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s2input\"]}})\n",
-    "xdt"
+    "xs = XarrayStore(str(product))\n",
+    "xs.open()\n",
+    "eop=xs.load()\n",
+    "eop\n"
    ]
   },
   {
@@ -122,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdt[\"conditions/detfoo/r60m\"][\"b01\"].plot()"
+    "eop[\"conditions/detfoo/r60m\"][\"b01\"].plot()"
    ]
   },
   {
@@ -131,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdt[\"measurements/r60m\"][\"b01\"].plot()"
+    "eop[\"measurements/r60m\"][\"b01\"].plot()"
    ]
   },
   {
@@ -140,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdt[\"measurements/r60m\"][\"b01\"].encoding[\"add_offset\"]"
+    "eop[\"measurements/r60m\"][\"b01\"]._data.encoding[\"add_offset\"]"
    ]
   },
   {
@@ -149,9 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xdt[\"measurements/r60m\"][\"b01\"].max(), xdt[\"measurements/r60m\"][\"b01\"].min(), xdt[\n",
-    "    \"measurements/r60m\"\n",
-    "][\"b01\"].mean()"
+    "min,max,mean=eop[\"measurements/r60m\"][\"b01\"].data.max(), eop[\"measurements/r60m\"][\"b01\"].data.min(), eop[\"measurements/r60m\"][\"b01\"].data.mean()\n",
+    "min.compute(),max.compute(),mean.compute()"
    ]
   },
   {
@@ -160,11 +143,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = xdt[\"measurements/r10m\"][\"b04\"]\n",
-    "g = xdt[\"measurements/r10m\"][\"b03\"]\n",
-    "b = xdt[\"measurements/r10m\"][\"b02\"]\n",
+    "r = eop[\"measurements/r10m\"][\"b04\"]\n",
+    "g = eop[\"measurements/r10m\"][\"b03\"]\n",
+    "b = eop[\"measurements/r10m\"][\"b02\"]\n",
     "\n",
-    "xr.Dataset(dict(r=r, g=g, b=b))"
+    "xr.Dataset(dict(r=r._data, g=g._data, b=b._data))"
    ]
   },
   {
@@ -173,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b02 = xdt[\"measurements/r10m\"][\"b02\"]\n",
+    "b02 = eop[\"measurements/r10m\"][\"b02\"]\n",
     "b02"
    ]
   },
@@ -192,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b02.encoding"
+    "b02._data.encoding"
    ]
   },
   {
@@ -215,7 +198,7 @@
     "        )\n",
     "\n",
     "concat = xr.concat(\n",
-    "        [xdt[str(p)] for p in rgb_band_paths],  # type: ignore\n",
+    "        [eop[str(p)]._data for p in rgb_band_paths],  # type: ignore\n",
     "        dim=\"band\",\n",
     "    )\n",
     "\n",
@@ -246,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = geopandas.GeoDataFrame.from_features([xdt.attrs[\"stac_discovery\"]])"
+    "gdf = geopandas.GeoDataFrame.from_features([eop.attrs[\"stac_discovery\"]])"
    ]
   },
   {
@@ -347,7 +330,7 @@
     "POLYGON_COLOR: str = 'r'\n",
     "\n",
     "# Get the geometry from the product and check that it correspond to the domain represented\n",
-    "geometry_from_product = np.squeeze(xdt.attrs[\"stac_discovery\"][\"geometry\"][\"coordinates\"])\n",
+    "geometry_from_product = np.squeeze(eop.attrs[\"stac_discovery\"][\"geometry\"][\"coordinates\"])\n",
     "geometry_from_product"
    ]
   },
@@ -369,7 +352,7 @@
     "                  crs=DESIRED_PROJECTION)\n",
     "\n",
     "\n",
-    "b02 = xdt[\"measurements/r10m\"][\"b02\"]\n",
+    "b02 = eop[\"measurements/r10m\"][\"b02\"]\n",
     "plt.contourf(b02[::SKIP_EVERY, ::SKIP_EVERY], transform=L1C_PROJECTION)\n",
     "poly = mpatches.Polygon(geometry_from_product, \n",
     "                        closed=True, \n",
@@ -406,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "U: float = xdt.attrs[\"other_metadata\"][\"reflectance_correction_factor_from_the_Sun-Earth_distance_variation_computed_using_the_acquisition_date\"]\n",
+    "U: float = eop.attrs[\"other_metadata\"][\"reflectance_correction_factor_from_the_Sun-Earth_distance_variation_computed_using_the_acquisition_date\"]\n",
     "U"
    ]
   },
@@ -421,7 +404,7 @@
     "# On the other hand, cosines can be interpolated\n",
     "# cos_zsa_5km: EOVariable = np.cos(np.deg2rad(xdt[].conditions.geometry.sza))\n",
     "# cos_zsa_5km\n",
-    "cos_sza_5km: xr.DataArray = np.cos(np.deg2rad(xdt[\"conditions/sun_ang/zen\"]))\n",
+    "cos_sza_5km: EOVariable = np.cos(np.deg2rad(eop[\"conditions/sun_ang/zen\"]))\n",
     "cos_sza_5km"
    ]
   },
@@ -435,7 +418,7 @@
     "BAND: int = 2\n",
     "\n",
     "# Band - 1 because Python list index starts at 0\n",
-    "solarIrradiance: float = np.float64(xdt.attrs[\"stac_discovery\"][\"properties\"][\"eo:bands\"][BAND-1][\"solar_illumination\"])"
+    "solarIrradiance: float = np.float64(eop.attrs[\"stac_discovery\"][\"properties\"][\"eo:bands\"][BAND-1][\"solar_illumination\"])"
    ]
   },
   {
@@ -444,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reflectance_b02_10m: xr.DataArray = xdt[\"measurements/r10m/b02\"]\n",
+    "reflectance_b02_10m: EOVariable = eop[\"measurements/r10m/b02\"]\n",
     "reflectance_b02_10m"
    ]
   },
@@ -455,7 +438,7 @@
    "outputs": [],
    "source": [
     "# Interpolate sza on the angles grid to the 10m grid\n",
-    "cos_sza_10m = cos_sza_5km.interp_like(reflectance_b02_10m)\n",
+    "cos_sza_10m: xr.DataArray = cos_sza_5km._data.interp_like(reflectance_b02_10m._data)\n",
     "cos_sza_10m.compute()"
    ]
   },
@@ -466,17 +449,8 @@
    "outputs": [],
    "source": [
     "# For simplicity, radiance computation assume that reflectances equal numerical counts\n",
-    "radiance = reflectance_b02_10m * cos_sza_10m * solarIrradiance * U / np.pi\n",
+    "radiance = reflectance_b02_10m._data * cos_sza_10m * solarIrradiance * U / np.pi\n",
     "radiance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radiance[5000,5000].data.compute()"
    ]
   },
   {
