--- a/check_MSIL2A.ipynb
+++ b/check_MSIL2A.ipynb
@@ -87,7 +87,7 @@
     "    secret=secrets[\"s2input\"][\"secret\"],\n",
     "    endpoint_url=secrets[\"s2input\"][\"endpoint_url\"]\n",
     ")\n",
-    "s3_path = s3.glob(SAMPLE_PATH+\"S02MSIL1C*.zip\")\n",
+    "s3_path = s3.glob(SAMPLE_PATH+\"S02MSIL2A*.zip\")\n",
     "store=f\"zip::s3://{s3_path[0]}\"\n",
     "store"
    ]
@@ -107,6 +107,15 @@
    "source": [
     "xdt = dt.open_datatree(store, engine=\"zarr\", mode=\"r\", chunks={},backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s2input\"]}})\n",
     "xdt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdt.attrs[\"geometry\"]"
    ]
   },
   {
@@ -246,7 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = geopandas.GeoDataFrame.from_features([xdt.attrs[\"stac_discovery\"]])"
+    "# gdf = geopandas.GeoDataFrame.from_features([xdt.attrs[\"stac_discovery\"]])\n",
+    "gdf = geopandas.GeoDataFrame.from_features([xdt.attrs])"
    ]
   },
   {
