--- a/check_OLCEFR.ipynb
+++ b/check_OLCEFR.ipynb
@@ -26,7 +26,9 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3OLCEFR_20230506T015316_0180_B117_T931.zarr\""
+    "files = [ f for f in SAMPLE_PATH.glob(\"S3OLCEFR*.zarr\")]\n",
+    "product = files[0]\n",
+    "product"
    ]
   },
   {
