--- a/check_SLSRBT.ipynb
+++ b/check_SLSRBT.ipynb
@@ -26,7 +26,9 @@
    "outputs": [],
    "source": [
     "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "product = SAMPLE_PATH / \"S3SLSRBT_20230315T095847_0179_B150_S106.zarr/\""
+    "files = [ f for f in SAMPLE_PATH.glob(\"S3SLSRBT*.zarr\")]\n",
+    "product = files[0]\n",
+    "product"
    ]
   },
   {
