--- a/check_SLSRBT_xarray_onthecloud.ipynb
+++ b/check_SLSRBT_xarray_onthecloud.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Browse S3 buckets and get SLSFRP product"
+    "### Browse S3 buckets and get SLSRBT product"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "    secret=secrets[\"s3input\"][\"secret\"],\n",
     "    endpoint_url=secrets[\"s3input\"][\"endpoint_url\"]\n",
     ")\n",
-    "s3_path = s3.glob(SAMPLE_PATH+\"S3SLSRBT*.zip\")\n",
+    "s3_path = s3.glob(SAMPLE_PATH+\"S03SLSRBT*.zip\")\n",
     "store=f\"zip::s3://{s3_path[0]}\"\n",
     "store"
    ]
