--- a/xarray_eop/conversion/check_adf.ipynb
+++ b/xarray_eop/conversion/check_adf.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
     "from xarray_eop.eop import open_eop_datatree"
    ]
   },
@@ -41,8 +42,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "secrets[\"s3input\"].pop(\"region_name\",None)\n",
-    "\n"
+    "secrets[\"s3input\"].pop(\"region_name\",None)"
    ]
   },
   {
@@ -65,7 +65,8 @@
     "    secret=secrets[\"s3input\"][\"secret\"],\n",
     "    endpoint_url=secrets[\"s3input\"][\"endpoint_url\"]\n",
     ")\n",
-    "s3_path = s3.glob(ADF_PATH+\"S3A*TIRCD*.zarr.zip\")\n",
+    "# s3_path = s3.glob(ADF_PATH+\"S3A*TIRCD*.zarr.zip\")\n",
+    "s3_path = s3.glob(ADF_PATH+\"S3A*OLCAL*.zarr.zip\")\n",
     "store=f\"zip::s3://{s3_path[0]}\"\n",
     "store"
    ]
@@ -76,7 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = open_eop_datatree(store,backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s3input\"]}})"
+    "dt = open_eop_datatree(store,backend_kwargs={\"storage_options\": {\"s3\":secrets[\"s3input\"]}},decode_times=False)\n",
+    "dt"
    ]
   }
  ],
