Modify LST product. Add few missing ADFs

--- a/check_EOPFAlex.ipynb
+++ b/check_EOPFAlex.ipynb
@@ -11,7 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tutorial on manipulating products with EOPF dev"
+    "# Tutorial on manipulating products with EOPF dev\n",
+    "* [OLCI L1 EFR](#olci-l1-efr)\n",
+    "    * [Open product](#open-the-product-using-eopf-api-and-visualize-the-tree-structure)\n",
+    "    * [Open measurement data](#opening-measurement-data)\n",
+    "    * [Plotting](#simple-raster-plot)\n",
+    "    * [Interpolating data](#open-meteorological-conditions)\n",
+    "* [SLSTR FRP](#slstr-frp)\n",
+    "    * [Open product](#slstr-frp)\n",
+    "    * [Plot active fire pixels](#plot-active-fire-pixels-positions-on-a-platecarree-grid)\n",
+    "* [SYN AOD](#syn-aod)\n",
+    "    * [Open product](#syn-aod)\n",
+    "    * [Plot geolocated data](#plot-using-the-coordinates-lonlat)\n",
+    "\n"
    ]
   },
   {
