--- a/docs/source/notebooks/tutorial_open_Zarr.ipynb
+++ b/docs/source/notebooks/tutorial_open_Zarr.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "import xarray as xr\n",
-    "from xarray_eop.eop import open_eop_datatree"
+    "\n",
+    "from xarray_eop.api import open_datatree\n",
+    "from xarray_eop.path import EOPath"
    ]
   },
   {
@@ -27,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE_PATH = Path(\"/mount/internal/work-st/projects/cs-412/2078-dpr/Samples/Products/Zarr_Beta\")\n",
-    "files = [ f for f in SAMPLE_PATH.glob(\"S03SLSFRP*.zarr\")]\n",
-    "product = files[0]"
+    "import importlib.resources\n",
+    "SAMPLE_PATH = importlib.resources.files(\"tests.ut.data\")\n",
+    "product = SAMPLE_PATH / \"sample.zarr\""
    ]
   },
   {
@@ -49,7 +50,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = open_eop_datatree(product)\n",
+    "dt = open_datatree(product)\n",
+    "dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = SAMPLE_PATH / \"sample.zip\"\n",
+    "dt = open_datatree(\"zip::\"+str(product),engine=\"zarr\")\n",
     "dt"
    ]
   },
@@ -62,25 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'xr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOa01_radiance.nc\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m ds \u001b[38;5;241m=\u001b[39m xr\u001b[38;5;241m.\u001b[39mopen_dataset(product,file_or_group\u001b[38;5;241m=\u001b[39mfile,engine\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msentinel-3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m ds\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'xr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "group = \"measurements/inadir\"\n",
+    "product = SAMPLE_PATH / \"sample.zarr\"\n",
+    "group = \"measurements/fine\"\n",
     "# Open with xarray zarr engine\n",
-    "# ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
+    "ds=xr.open_dataset(SAMPLE_PATH / product / group, engine=\"zarr\",chunks={})\n",
     "# Open with custom engine=\"eop\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product, group=group, engine=\"eop\")\n",
     "ds"
@@ -103,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
