Add some documentation

--- a/docs/source/notebooks/tutorial_open_Zarr.ipynb
+++ b/docs/source/notebooks/tutorial_open_Zarr.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Product store in the filesystem "
+    "## Product stored in the filesystem "
    ]
   },
   {
@@ -85,6 +85,34 @@
     "# Open with custom engine=\"eop\"\n",
     "ds=xr.open_dataset(SAMPLE_PATH / product, group=group, engine=\"eop\")\n",
     "ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Product stored in S3 bucket\n",
+    "Products store in S3 object-storage can also be accessed.\n",
+    "\n",
+    "> **Note:**  The credentials are tried to be retrieved automatically looking for AWS or S3 environment variables.\n",
+    "It can alsso be explicitely passed to the function using the addition kwargs *backend_kwargs*, whose value is a \n",
+    "dictionary in the form {\"s3\":{\"key\": *access-key*,\"secret\": *secret-key*,\"endpoint_url\": *endpoint_url*}}. \n",
+    "\n",
+    "xarray-eop provide an EOPath classe derived from pathlib.Path which supports S3 paths and well as fsspec-like URL chain.\n",
+    "\n",
+    "For instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buc_name = EOPath(\"zip::s3://buc-acaw-dpr\")\n",
+    "product = buc_name / \"Samples/Zarr/S03OLCEFR_20230506T015316_0180_B117_T229.zarr.zip\"\n",
+    "dt = open_datatree(product)\n",
+    "dt"
    ]
   }
  ],
