Add secret alias for cloud-storage credentials, and add specific vars/groups to be compared in the verification tool

--- a/docs/source/notebooks/example_call_compare.ipynb
+++ b/docs/source/notebooks/example_call_compare.ipynb
@@ -61,7 +61,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "call_compare(ref,new,verbose=False,threshold=2.e-5)"
+    "call_compare(ref,new,verbose=False,relative=False,threshold=2.e-5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also possible to compare only a few variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "call_compare(\n",
+    "    ref,\n",
+    "    new,\n",
+    "    verbose=False,\n",
+    "    relative=True,\n",
+    "    threshold=2.e-5,\n",
+    "    cmp_vars=\"/measurements/oa01_radiance:/measurements/oa01_radiance\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or few groups.\n",
+    "Besides, the input products can be whether Sentinel-3 SAFE products or re-engineered EOPF-like Zarr products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "path = EOPath(\"s3://buc-acaw-dpr/Samples/Zarr/\")\n",
+    "ref = ( path / \"S03OLCERR_20191227T124211_0059_A109_S000.zarr\" )\n",
+    "new = ( path / \"S03OLCERR_20191227T124211_0059_A109_S001.zarr\" )\n",
+    "\n",
+    "call_compare(ref,new,verbose=False,relative=True,threshold=2.e-5,cmp_grps=\"/measurements:/measurements\")\n"
    ]
   }
  ],
