Fix previous commit: add missing file, update notebook

--- a/docs/source/notebooks/example_call_compare.ipynb
+++ b/docs/source/notebooks/example_call_compare.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "from xarray_eop import EOPath\n",
-    "from xarray_eop.verification.compare import call_compare\n",
+    "from xarray_eop.verification.cli_compare import call_compare\n",
     "\n",
     "internal_path = EOPath(\n",
     "        \"s3://buc-acaw-dpr/Samples/SAFE/\"\n",
